name:                dump-core
version:             0.1.3
synopsis:            A plug-in for rendering GHC core
license:             ISC
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

data-files:          ui/see.js,
                     ui/see.css,
                     ui/jquery.js,
                     ui/fonts/OFL.txt,
                     ui/fonts/FiraMono-Regular.ttf,
                     ui/fonts/FiraMono-Bold.ttf
library
  exposed-modules:     DumpCore
  other-modules:       Paths_dump_core
  build-depends:       base >=4.9 && <4.10, ghc, text, aeson, bytestring,
                       containers, monadLib, directory, filepath
  default-language:    Haskell2010
